--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/rsuite/5.8.1/rsuite.min.js" integrity="sha512-iFoAvuIPOn4reX0xjAk3wB9WcUNTvQ+KFOi69x07iglCJvMUdUvW9bxT5DAsTd78cabVmWXt4kDiTbxdw8CXfQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/rsuite/5.8.1/rsuite.js" integrity="sha512-lgbtlvqULlxC8820/L8ezSRhJ8FtP7buqOGNt9+20DlGy/w8ADlnCJVoFeiqqctrAJdkCpGNOsq304zivKK0Uw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
